# muse-recommender-system

./: .gitignore  Dockerfile  README.md  pyproject.toml  utils.py
app/: main.py
app/api/v1/: debug.py
app/api/v1/profanity/: profanity.py
app/api/v1/recommend/: personal.py
app/core/: db.py
app/schemas/: recommendation.py
app/services/: content_based.py  data_access.py  recommendation_service.py
